--- a/css.css
+++ b/css.css
@@ -44,6 +44,7 @@ aside{
     justify-content: center;
     height: 50vh;
     margin-top: 20vh;
+    cursor: pointer;
 }
 .click_me{
     margin-top: 2rem;
